WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
27263
WebInspector: show last opened panel when invoking inspector.
https://bugs.webkit.org/show_bug.cgi?id=27263
Summary
WebInspector: show last opened panel when invoking inspector.
Pavel Feldman
Reported
2009-07-14 08:40:54 PDT
Currently Elements panel is being shown on open, no matter which one user was using before.
Attachments
patch
(6.41 KB, patch)
2009-07-14 08:52 PDT
,
Pavel Feldman
timothy
: review+
Details
Formatted Diff
Diff
patch
(1.53 KB, patch)
2009-07-14 22:47 PDT
,
Pavel Feldman
no flags
Details
Formatted Diff
Diff
patch
(2.29 KB, text/plain)
2009-07-14 22:53 PDT
,
Pavel Feldman
no flags
Details
patch
(2.29 KB, patch)
2009-07-14 22:54 PDT
,
Pavel Feldman
timothy
: review+
Details
Formatted Diff
Diff
patch
(1.75 KB, patch)
2009-07-16 02:34 PDT
,
Pavel Feldman
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Pavel Feldman
Comment 1
2009-07-14 08:52:35 PDT
Created
attachment 32715
[details]
patch
Timothy Hatcher
Comment 2
2009-07-14 09:01:47 PDT
Comment on
attachment 32715
[details]
patch
> + if (lastActivePanelSetting.type() == Setting::StringType) { > + m_showAfterVisible = specialPanelForJSName(lastActivePanelSetting.string()); > + }
No need for the curly braces.
Pavel Feldman
Comment 3
2009-07-14 09:30:16 PDT
Sending WebCore/ChangeLog Sending WebCore/inspector/InspectorController.cpp Sending WebCore/inspector/InspectorController.h Sending WebCore/inspector/InspectorController.idl Sending WebCore/inspector/front-end/inspector.js Transmitting file data ..... Committed revision 45861.
Joseph Pecoraro
Comment 4
2009-07-14 17:11:38 PDT
After this was applied I got a small error when I open the Inspector with the ⌥⌘C shortcut that opens the console. TypeError: Result of expression 'WebInspector.currentPanel' [undefined] is not a valid argument for 'in'. That comes from Console.js, at approx line 87:
http://trac.webkit.org/browser/trunk/WebCore/inspector/front-end/Console.js#L59
function animationFinished() { if ("updateStatusBarItems" in WebInspector.currentPanel) WebInspector.currentPanel.updateStatusBarItems(); WebInspector.currentFocusElement = this.promptElement; delete this._animating; } I think that has to do with the fact that a "this.currentPanel" was deleted in this patch.
Joseph Pecoraro
Comment 5
2009-07-14 17:19:49 PDT
Eek, opening with ⌥⌘I I am getting an empty error messages from: InspectorController.storeLastActivePanel(panelName);
Pavel Feldman
Comment 6
2009-07-14 22:47:28 PDT
Created
attachment 32766
[details]
patch
Pavel Feldman
Comment 7
2009-07-14 22:53:31 PDT
Created
attachment 32767
[details]
patch
Pavel Feldman
Comment 8
2009-07-14 22:54:07 PDT
Created
attachment 32768
[details]
patch
Pavel Feldman
Comment 9
2009-07-15 01:11:39 PDT
Sending WebCore/ChangeLog Sending WebCore/inspector/InspectorController.cpp Sending WebCore/inspector/InspectorController.idl Transmitting file data ... Committed revision 45899.
Keishi Hattori
Comment 10
2009-07-15 20:22:14 PDT
This error seems to happen because [WebInspector showConsole] firing before m_frontend is set causes m_showAfterVisible to be overridden from CurrentPanel to ConsolePanel. I'm not sure but maybe adding m_showConsoleAfterVisible would be a fix?
Pavel Feldman
Comment 11
2009-07-16 02:34:58 PDT
Created
attachment 32847
[details]
patch Special case ConsolePanel opening.
Eric Seidel (no email)
Comment 12
2009-07-20 15:04:01 PDT
Comment on
attachment 32847
[details]
patch If this is closed as fixed, nothing should be marked for review.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug