WebCore/inspector/InspectorController.h
@@ -113,6 +113,12 @@ public:
             m_simpleContent.m_boolean = value;
         }
 
+        explicit Setting(const String& value)
+            : m_type(StringType)
+        {
+            m_string = value;
+        }
+
         Type type() const { return m_type; }
 
         String string() const { ASSERT(m_type == StringType); return m_string; }
@@ -182,6 +188,8 @@ public:
 
     void setAttachedWindow(bool);
     void setAttachedWindowHeight(unsigned height);
+
+    void storeLastActivePanel(const String& panelName);
 
     void toggleSearchForNodeInPage();
     bool searchingForNodeInPage() { return m_searchingForNode; };
@@ -302,6 +310,8 @@ private:
     void showWindow();
 
     bool isMainResourceLoader(DocumentLoader* loader, const KURL& requestUrl);
+
+    SpecialPanels specialPanelForJSName(const String& panelName);
 
     Page* m_inspectedPage;
     InspectorClient* m_client;
